test/files/neg/eta-expansion-for-method-expected.scala
object Test {
  def meth(i: Int) = i

  val func = meth
}
